--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,22 @@
 #7D47BB
 
 */
+.pages{
+    display: grid;
+}
 
+.pages > div{
+    
+}
+
+.fade-enter-active {
+    transition: all .3s ease;
+}
+.fade-leave-active {
+    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.fade-enter, .fade-leave-to
+    /* .slide-fade-leave-active below version 2.1.8 */ {
+    transform: translateX(10px);
+    opacity: 0;
+}
