--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,13 @@
 }
 
 .pages > div{
-    
+    grid-row: 1;
+    grid-column: 1;
 }
 
-.fade-enter-active {
-    transition: all .3s ease;
+.v-enter-active, .v-leave-active {
+    transition: opacity .5s;
 }
-.fade-leave-active {
-    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
-}
-.fade-enter, .fade-leave-to
-    /* .slide-fade-leave-active below version 2.1.8 */ {
-    transform: translateX(10px);
+.v-enter, .v-leave-to {
     opacity: 0;
 }
