Black added to stylegui colors

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 /*
 
-NARANJA::#C2814D 
-NARANJA_DARK::#934a10 
-VERDE::#45B173 
-VERDE_DARK::#3d9b65
-MORADO::#7D47BB
-MORADO_LIGHT:: #9959e3
+STYLEGUIDE - COLORS
+
+NEGRO ::::::::: #333333
+NARANJA ::::::: #C2814D 
+NARANJA_DARK :: #934a10 
+VERDE ::::::::: #45B173 
+VERDE_DARK :::: #3d9b65
+MORADO :::::::: #7D47BB
+MORADO_LIGHT :: #9959e3
 
 */
 body{
