--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ STYLEGUIDE - COLORS
 
 NEGRO ::::::::: #333333
 NARANJA ::::::: #C2814D 
-NARANJA_DARK :: #934a10 
+NARANJA_DARK :: #81512a 
 VERDE ::::::::: #45B173 
 VERDE_DARK :::: #3d9b65
 MORADO :::::::: #7D47BB
@@ -16,13 +16,23 @@ body{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    color: #333;
 }
 .header{
     background: #fff;
     padding: 20px 0;
 }
 .wrapper{
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 1240px;
     padding: 0 30px;
+    margin: 0 auto;
+}
+@media (max-width: 980px) {
+    .wrapper{
+        padding: 0 15px;
+    }
 }
 .header .flex{
     justify-content: space-between;
@@ -37,13 +47,6 @@ body{
 }
 .flex{
     display: flex;
-}
-.products-4row{
-    display: flex;
-    justify-content: space-between;
-}
-.products-4row > div{
-    width: 23%;
 }
 .pages > div{
     grid-row: 1;
