--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ body{
     font-weight: 500;
     color: #333;    
 }
+img{
+    max-width: 100%;
+}
 .header{
     background: #fff;
     padding: 15px 0;
